# JavascriptIntegration

./: .gitignore  CMakeLists.txt  README.md
asset/: person.js
javascript/: duktape_impl.cpp  duktape_impl.h  javascript.cpp  javascript.h  main.cpp
javascript_test/: javascript_test.cpp  javascript_test.h  main.cpp
